# openimage

./: .dockerignore  .env  .env.example  .gitignore  API_README.md  Dockerfile  README.md  START_GUI.md  api_server.py  cache_manager.py  docker-compose.yml  docker-test-results.md  main.py  pyproject.toml  requirements.txt  test_api.sh  web_gui.py
src/: __init__.py  cache.py  config.py  face_detector.py  gender_classifier.py  gender_detector.py  image_finder.py  models.py  tf_cpu_init.py
src/sources/: __init__.py  base.py  europa.py  infogouv.py  pexels.py  pixabay.py  unsplash.py  whitehouse.py  wikimedia.py
static/css/: style.css
templates/: index.html
tests/: __init__.py  test_face_detector.py  test_image_finder.py  test_models.py  test_sources.py
