[project]
name = "openimage"
version = "0.1.0"
description = "Search for openly licensed images with face detection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "setuptools>=65.0.0",
    "face-recognition>=1.3.0",
    "face_recognition_models @ git+https://github.com/ageitgey/face_recognition_models",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
